<resources>
    <string name="app_name">Catering-Subscribe</string>

    <string name="home">Home</string>
    <string name="start_subscriptions">Mulai Langganan</string>
    <string name="next">Selanjutnya</string>

    <string name="start">Mulai</string>
    <string name="delivery">Pengiriman</string>
    <string name="payment">Pembayaran</string>

    <string name="amount_box_per_day">Jumlah Box per Hari</string>
    <string name="subcription_time">Lama Langganan</string>
    <string name="pro_tips">Pro Tips</string>
    <string name="pro_tips_start_subcription">Atur jadwal langganan dengan menekan tanggal pada kalender. Selesaikan transaksi sebelum pukul 19:00 untuk mulai pengiriman besok.</string>
    <string name="total">Total</string>

    <string name="subcription_detail">Rincian Langganan</string>
    <string name="price_per_box">Harga per Box</string>
    <string name="amount_box">Jumlah Box</string>

    <string name="tag_box">%1$s Box</string>
    <string name="tag_days">%1$s Hari</string>
    <string name="start_subcription_date_tag">Mulai %1$s</string>

    <string name="should_select_more_dates">Anda kurang memilih hari. Pilih %1$s lagi!</string>

    <string-array name="custom_weekdays">
        <item>SEN</item>
        <item>SEL</item>
        <item>RAB</item>
        <item>KAM</item>
        <item>JUM</item>
        <item>SAB</item>
        <item>MIN</item>
    </string-array>

    <string-array name="custom_months">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>July</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>

</resources>
